# amly

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
src/: api.rs  lib.rs  main.rs  parser.rs
